txt-output/32.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: "True" should be True
string2bool :: String -> Bool
string2bool = undefined
not x = if x then string2bool "False"           
             else fst ("True", 1)
             

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\32.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\32.hs:9:18:
    Couldn't match expected type `Bool' against inferred type `[Char]'
    In the expression: fst ("True", 1)
    In the expression:
        if x then string2bool "False" else fst ("True", 1)
    In the definition of `Main.not':
        Main.not x = if x then string2bool "False" else fst ("True", 1)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\32.hs, ill-typed\32.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\32.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\32.hs:9:24: error:
    * Couldn't match type `[Char]' with `Bool'
      Expected: Bool
        Actual: String
    * In the expression: "True"
      In the first argument of `fst', namely `("True", 1)'
      In the expression: fst ("True", 1)
  |
9 |              else fst ("True", 1)
  |                        ^^^^^^
